@@ -34,8 +34,8 @@ private:
 
     // Create a texture and render all the textures to it, using the spacing 
     // variables from hotbar. row is expected to be 0 or 1.
-    SDL_Texture *renderHotbarPart(int row, std::string path, 
-        SDL_Texture* texture) const;
+    Texture *renderHotbarPart(int row, std::string path, 
+        Texture *texture, int left, int up) const;
 
     // Draw the entire hotbar sprite to a texture. This only needs to be called
     // when the hotbar is first made, or when anything about it changes.
